# inertial_parameter_application

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  redis_keys.txt.rtf
01-panda_force_control/: CMakeLists.txt  calibration.cpp  controller.cpp  controller02.cpp  controllerLS  controllerLS.cpp  controllerRLS.cpp  data_file_03-15-19_11-34-21.txt  ekf_test.cpp  estimation_controller.cpp  estimation_controller_debugging.cpp  estimation_test.cpp  find_IMU_frame.cpp  grasping_tests.cpp  kf_tuning.cpp  panda_arm.urdf  panda_arm_FT_sensor.urdf  panda_arm_sensor.urdf  simviz.cpp  template_controller.cpp  testing_hand.cpp  trajectory_testing.cpp  world.urdf
01-panda_force_control/01-kalman_filters/: CMakeLists.txt  ekf_test.cpp  kf_tuning.cpp
01-panda_force_control/02-adaptive_filters/: CMakeLists.txt  TLScontroller.cpp  controllerLS.cpp  controllerRLS.cpp
01-panda_force_control/03-trajectories/: CMakeLists.txt  coeffs_terminal.txt  compare_kinematics.cpp  sinusoidal_trajectories.cpp  sinusoidal_trajectories.txt  sinusoidal_trajectories_02.txt  sinusoidal_trajectories_03.txt  sinusoidal_trajectories_04.txt  sinusoidal_trajectories_05.txt  terminal output  test.cpp  trajectory_testing.cpp  tune_sinusoidal_trajectories.cpp
01-panda_force_control/04-SVH_hand/: CMakeLists.txt  GRASPING OBJECT LO  estimation_loads.cpp  grasping_stange.cpp  grasping_test_orientation.cpp  grasping_tests.cpp  load_grasping.cpp  sinusoidal.cpp  testing_hand.cpp
01-panda_force_control/05-estimation_controllers/: CMakeLists.txt  estimation_controller.cpp  estimation_controller_debugging.cpp  estimation_test.cpp  inertia_estimation.cpp  sinusoidal_estimation.cpp
01-panda_force_control/06-urdf_files/: CMakeLists.txt  panda_arm.urdf  panda_arm_FT_sensor.urdf  panda_arm_FT_sensor_with_mass.urdf  panda_arm_object.urdf  panda_arm_with_modeled_sensor.urdf  svh.urdf  svh_test.urdf  world.urdf  world_panda_arm.urdf  world_panda_arm_object.urdf  world_robot_with_sensor.urdf  world_svh_hand.urdf  world_without_gravity.urdf
01-panda_force_control/07-simulations/: CMakeLists.txt  sim_gravity_compensation.cpp  simviz.cpp  simviz02.cpp  simviz_modeled_sensor.cpp  simviz_orig.cpp  simviz_svh.cpp
01-panda_force_control/08-load_estimation/: CMakeLists.txt  object_estimation.cpp  panda_arm.urdf  simviz.cpp  world.urdf
02-utilities/: CMakeLists.txt  FT_data1.txt  calibration.cpp  find_IMU_frame.cpp  panda_arm.urdf  panda_arm_FT_sensor.urdf  panda_arm_force_sensor.urdf  simviz.cpp  world.urdf
03-tests/: CMakeLists.txt  robot_test.urdf  simviz.cpp  test_mean.cpp  world_test.urdf
04-matlab/: TrajectoryGeneration.m  WaypointTrajectory.m  panda_arm.xml  panda_arm_FT_sensor.urdf  panda_arm_sai.urdf  read_strin.m  solving_estimation.m  virtualforcesensor.m
04-matlab/Model/: panda_arm.urdf
05-examples/: CMakeLists.txt  controller.cpp  estimation_example.cpp  estimation_kalman_template.cpp  estimation_lowpass_template.cpp  kalman_template.cpp  panda_arm.urdf  panda_arm_FT_sensor.urdf  simviz.cpp  world.urdf
05-examples/data_collection/trajectory/: logger_trajectory.py
data_collection/: FunctionsAndObjects.py  data_analysis.ipynb  data_analysis_copy.ipynb  data_analysis_hardware.ipynb  data_file_02-07-19_12-14-42  data_file_02-07-19_15-01-53  data_file_02-07-19_17-13-49  data_file_02-07-19_17-43-09  data_file_02-07-19_17-47-21  data_file_02-07-19_17-50-26  data_file_02-07-19_17-55-17  data_file_02-07-19_18-34-48  data_file_02-07-19_18-37-49  data_file_02-19-19_17-57-01  data_file_02-20-19_10-17-10  data_file_02-20-19_10-29-27  data_file_02-20-19_16-15-11  data_file_02-20-19_16-20-22  data_file_02-20-19_16-34-38  data_file_02-20-19_16-40-18  data_file_02-20-19_17-20-45  data_file_02-20-19_17-23-41  data_file_02-20-19_17-31-25  data_file_02-20-19_17-35-21  data_file_02-25-19_11-14-39  logger_force.py  logger_kinematics.py  plotter_force.py  plotter_kinematics.py
data_collection/.ipynb_checkpoints/: .ipynb-checkpoint  data_analysis-checkpoint.ipynb  data_analysis_copy-checkpoint.ipynb  data_analysis_hardware-checkpoint.ipynb
data_collection/calibration/: data_file_02-07-19_11-53-15
data_collection/debug/: data_file_02-20-19_16-14-36  data_file_02-20-19_17-20-13
data_collection/extended_kalman_filter/: analysis_ekf_sim.ipynb  data_file_02-26-19_11-05-44  data_file_03-04-19_11-48-19  data_file_03-04-19_11-54-40  data_file_03-04-19_12-05-45
data_collection/final_estimation/: logger_kinematics.py
data_collection/find_IMU_frame/: IMU_frame.py.ipynb  logger_find_IMU_frame.py
data_collection/force_sensor_calib/: logger_force_calib  logger_force_calib.py
data_collection/hardware/: logger_butter_lp_filt.py  logger_estimation_output.py  logger_filtered_kinematics.py  logger_local_global_kinematics_hardware.py  logging_hardware_all_states.py  logging_hardware_estimation_inputs_joint_trajectory.py
data_collection/kalman_filter/: KF_data_analysis_hardware.ipynb  Kalman Filter Tuning.ipynb  Untitled.ipynb  data_file_02-28-19_17-47-24  kf_logger.py  kf_plotter.py  logger_tuning.py
data_collection/sensor_variation/: data_file_02-25-19_12-07-00  logger_sensors.py  plotter_sensors.py
data_collection/simulation/: Untitled.ipynb  ft_tuning.py  logger_butter_lp_filt.py  logger_local_global_kinematics_sim.py  logger_step_response_ft_virtual.py  logging_sim_all_states.py  logging_sim_estimation.py  logging_sim_estimation_inputs_joint_trajectory.py  logging_sim_input_estimation.py  notebook_input_kinematics.ipynb  plotter_input_kinematics.py  plotting_inertial_param_est.py.ipynb  plotting_kinematics.py.ipynb  plotting_notebook.ipynb  plotting_sim_forces.ipynb  plotting_sinusoidal.ipynb  virtual_force_sensor_tuning.ipynb
include/filters/: ExtendedKalmanFilter.h  KalmanFilter.h  QuaternionBasedEKF.h  QuaternionBasedEKF2.cpp  QuaternionBasedEKF2.h
include/parameter_estimation/: LeastSquare.cpp  LeastSquare.h  RecursiveLeastSquare.h
inertia_calculation/: inertia_calculation.ipynb
src/filters/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  FIRFilter.hpp  KalmanFilter.cpp  KalmanFilter.h  MeanFilter.cpp  (+8 more)
(+106 files in other folders)
