# create an executabl
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${INERTIAL_PARAMERTER_APP_BINARY_DIR}/03-tests)
# add the include directory to the include paths
INCLUDE_DIRECTORIES (
	${INERTIAL_PARAMETER_INCLUDE_DIRS})

ADD_EXECUTABLE(simviz03 simviz.cpp)
TARGET_LINK_LIBRARIES(simviz03 ${INERTIAL_PARAMERTER_APP_COMMON_LIBRARIES} ${INERTIAL_PARAMETER_LIBRARIES})

SET(RESOURCE_DIR ${INERTIAL_PARAMERTER_APP_BINARY_DIR}/resources)
FILE(MAKE_DIRECTORY ${RESOURCE_DIR})
SET(APP_RESOURCE_DIR ${RESOURCE_DIR}/03-tests)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY robot_test.urdf
		  world_test.urdf
		    DESTINATION ${APP_RESOURCE_DIR})